--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BitDEX</title>
+    <title>Bitswap</title>
     <style>
       body {
         background-color: #0d0d0d;
