--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">Bitdex</div>
+      <div class="logo">Bitswap</div>
       <button class="button">Connect Wallet</button>
+      <button class="button">Bitmask</button>
     </div>
     <div class="form-container">
       <div class="form-header">Swap</div>
